# freetds.net

./: .gitignore  CMakeLists.txt  FreeTds.Net.sln  README.md  premake5.lua
DefGen/: Program.cs
Tds.Net/: Iconv.cs  IconvTypes.cs  LazyFactory.cs  NativeExtensions.cs  NativeLibrary.cs  NativeUtf8.cs  ProtoTypes.cs  ServerTypes.cs  Tds.Net.csproj  Tds.cs  TdsContext.cs  TdsFactory.cs  TdsTypes.cs
Tds.Net/Server/: Login.cs
Tds.Tests/: Common.cs  FreeTdsNavigableTest.cs  FreeTdsTest.cs  ServerTest.cs  Tds.Tests.csproj  TdsTest.cs
custom-ports/freetds/: CONTROL  portfile.cmake
custom-ports/freetds/pool/: user.c
custom-ports/freetds/server/: login.c  query.c  server.h
native.test/: native.test.vcxproj  native.test.vcxproj.filters  server_test.c
tds.core/: Program.cs  tds.core.csproj
tds.def/: Program.cs
